Answer the review of the answer
A reading of the fixes found three of the same kind of divergence they set
out to remove.

The rule telling the setter of a property from a setter of another type was
applied the wrong way round: the processor keeps a setter whose parameter takes
what the property holds, `setValue(Object)` of a `String` property among them,
and drops one that takes less. It was dropping the first and keeping the second,
and, when the property was read from a field, dropping the only setter left the
type no property at all. It also ran against the type of a field, where the
processor asks a getter what the property holds.

A method read reflectively, the one member of a hierarchy read without an
introspection or a bean definition, was still read without the type asking for
it, so a method a generic super type declares answered the bound of its
variable rather than the value the reading type gives it.

Reading a live annotation through the core factory left the annotations nested
in it converted but not described: a nested annotation kept the members equal to
their defaults that the outer one drops, its defaults were never registered, its
`@NonBinding` members were not recorded and no customizer saw it. The nested
instance is read again and described the way the outer one is. The defensive
copy of an array member is back with it, for the annotations that are not JDK
proxies and hand back the array they hold.

Two of the fixes reached further than the finding they answered. Excluding the
platform packages from every reflective introspection took a choice from a
caller reflecting on a type explicitly, which the module leaves to it: the
exclusion belongs to the fallback, which serves the types an application
allowed. And the read and the write views of a supplemented introspection were
derived from the merged view, which replaced the arguments a generated
introspection reports for a property read and written as different types; they
are the generated views